--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ packages = [{include = "modrinth"}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
+requests = "^2.31.0"
+loguru = "^0.7.2"
 
 
 [build-system]
