--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "modrinth-py"
-version = "1.0.2"
+version = "2.0.0-alpha"
 description = ""
 authors = ["KalebSchmidlkofer <kaleb@ashbyte.com>"]
 readme = "README.md"
